ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /customers
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 80
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
 name: product
 annotations:
   konghq.com/plugins: twelve-per-min
spec:
 selector:
   app: product
 ports:
 - port: 80
   targetPort: 8080
